Fix color contrasts

--- a/views/styles/layout/input.styl
+++ b/views/styles/layout/input.styl
@@ -29,3 +29,4 @@
 .submitButton:hover
     background-color #E40520
     border-color #E40520
+    color #fff
