--- a/views/styles/layout/nav.styl
+++ b/views/styles/layout/nav.styl
@@ -20,7 +20,7 @@
     line-height 100%
 
   .navbar-brand 
-    color #000
+    color #fff
 
   #navbar
     border none
@@ -48,7 +48,7 @@
 
   .navbar-right
     a, a:hover
-      color #000 !important
+      color #fff !important
 
   .navbar-toggle:focus
     background none
